--- a/config/.env
+++ b/config/.env
@@ -9,10 +9,12 @@ TEST_DB_PASS="password"
 TEST_DB_HOST="db"
 TEST_DB_PORT="5432"
 TEST_DB_DATABASE="microservices"
+TEST_SNS_TARGET_ARN="arn:aws:sns:us-east-1:000000000000:bcbsnc-helix-ingestion-notification"
 
 DEV_DB_USER="postgres"
 DEV_DB_PASS="admin"
 DEV_DB_HOST="db"
 DEV_DB_PORT="5432"
 DEV_DB_DATABASE="microservices"
+DEV_SNS_TARGET_ARN="arn:aws:sns:us-east-1:000000000000:bcbsnc-helix-ingestion-notification"
 
