--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -3,6 +3,7 @@ psycopg2-binary==2.8.6
 databases[postgresql]==0.4.3
 SQLAlchemy==1.3.19
 python-dotenv==0.17.1
+boto3==1.15.1
 pytest==6.0.1
 requests==2.24.0
 pytest-html==2.1.1
